# voe-outage-calendar-sync

./: .gitignore  LICENSE  pyproject.toml
src/: manage.py  package-lock.json  package.json  tailwind.config.js
src/voe_outage_calendar/: __init__.py  __main__.py  ica_to_gcal_sync_config.py  ical.py  models.py  voe.py
src/voe_outage_calendar/voe/: __init__.py  client.py  parsers.py
src/voe_outage_sync/: apps.py  urls.py  views.py
src/voe_outage_sync/jinja2/: index.html  site.webmanifest
src/voe_outage_sync/locale/uk_UA/LC_MESSAGES/: django.po
src/voe_outage_sync/management/commands/: gcal_create.py  sync.py
src/voe_outage_sync/services/: calendar.py
src/voe_outage_web/: asgi.py  jinja2.py  settings.py  settings_logging.py  urls.py  wsgi.py
